<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/imagebg1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_login" />


    <ImageView
        android:id="@+id/imagebg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />


    <ScrollView
        android:id="@+id/scroolView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:text="@string/welcome_back"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple" />

            <ImageView
                android:id="@+id/imageArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/btn_login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGoogle"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_background2"
                android:drawableStart="@drawable/google"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/sing_up_with_google"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFacebook"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_background2"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/sing_up_with_facebook"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_new_user_register"
                android:layout_marginTop="32dp"
                android:textColor="@color/purple"
                android:textAlignment="center"/>


        </LinearLayout>
    </ScrollView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title=" "
            app:layout_scrollFlags="scroll|enterAlways"/>


</androidx.constraintlayout.widget.ConstraintLayout>
